novo layout donna

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <div class="slide-list" data-slide="list">
                     <div class="slide-item" data-slide="item" data-index="0">
                         <div class="slide-content">
-                            <img class="slide-image" src="imgs/assassinscreed.png" alt="Assassin's Creed" />
+                            <img class="slide-image" src="imagens/bannerdonna2.jpg" alt="Assassin's Creed" />
                             <div class="slide-description">
                                 <h3>Lorem ipsum</h3>
                                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit</p>
@@ -63,7 +63,7 @@
                     </div>
                     <div class="slide-item" data-slide="item" data-index="1">
                         <div class="slide-content">
-                            <img class="slide-image" src="imgs/fortnite.png" alt="Fortnite" />
+                            <img class="slide-image" height="100%" src="imagens/esterica facil.jpg" alt="Fortnite" />
                             <div class="slide-description">
                                 <h3>Lorem ipsum</h3>
                                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit</p>
@@ -72,7 +72,7 @@
                     </div>
                     <div class="slide-item" data-slide="item" data-index="2">
                         <div class="slide-content">
-                            <img class="slide-image" src="imgs/gta-v.png" alt="Freefire" />
+                            <img class="slide-image" src="imagens/manicure.jpg" alt="Freefire" />
                             <div class="slide-description">
                                 <h3>Lorem ipsum</h3>
                                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit</p>
@@ -81,7 +81,7 @@
                     </div>
                     <div class="slide-item" data-slide="item" data-index="3">
                         <div class="slide-content">
-                            <img class="slide-image" src="imgs/league-of-legends.png" alt="GTA V" />
+                            <img class="slide-image" src="imagens/depilacao-com-cera-00.jpg" alt="GTA V" />
                             <div class="slide-description">
                                 <h3>Lorem ipsum</h3>
                                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit</p>
@@ -90,7 +90,7 @@
                     </div>
                     <div class="slide-item" data-slide="item" data-index="4">
                         <div class="slide-content">
-                            <img class="slide-image" src="imgs/halo5.png" alt="Halo 5" />
+                            <img class="slide-image" height="100%" src="imagens/lempezadepele.jpg" alt="Halo 5" />
                             <div class="slide-description">
                                 <h3>Lorem ipsum</h3>
                                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit</p>
@@ -99,7 +99,7 @@
                     </div>
                     <div class="slide-item" data-slide="item" data-index="5">
                         <div class="slide-content">
-                            <img class="slide-image" src="imgs/red-dead-redemption-2.png" alt="League of Legends" />
+                            <img class="slide-image" height="100%" src="imagens/design-de-sobrancelhas-1.png" alt="League of Legends" />
                             <div class="slide-description">
                                 <h3>Lorem ipsum</h3>
                                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit</p>
@@ -117,7 +117,7 @@
                     </div>
                     <div class="slide-item" data-slide="item" data-index="7">
                         <div class="slide-content">
-                            <img class="slide-image" src="imagens/rosto.png" alt="Zelda" />
+                            <img class="slide-image" src="imagens/Pedra_Quente_aclimacao.jpg" alt="Zelda" />
                             <div class="slide-description">
                                 <h3>Lorem ipsum</h3>
                                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit</p>
